--- a/src/components/TitleLinks.astro
+++ b/src/components/TitleLinks.astro
@@ -6,7 +6,7 @@
     <a href="/map" target="_blank" title="map" aria-label="a link to a map" class="link-map">
         <img src="/images/map.png" class="map-img" alt="map" />
     </a>
-    <a href="https://bits.n4n5.dev/" title="links" aria-label="a link to more links" class="link-link">
+    <a href="https://links.n4n5.dev/" title="links" aria-label="a link to more links" class="link-link">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
