--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -23,7 +23,7 @@ import Layout from "@layouts/Layout.astro";
         }, 1000);
         setTimeout(() => {
             window.location.href = "/";
-        }, 3000);
+        }, countdown * 1000);
     </script>
 </Layout>
 
