--- a/src/components/TitleLinks.astro
+++ b/src/components/TitleLinks.astro
@@ -3,7 +3,7 @@
 ---
 
 <div class="wrap-links">
-    <a href="/map" target="_blank" title="map" aria-label="a link to a map" class="link-map">
+    <a href="https://map.n4n5.dev/" target="_blank" title="map" aria-label="a link to a map" class="link-map">
         <img src="/images/map.png" class="map-img" alt="map" />
     </a>
     <a href="https://links.n4n5.dev/" title="links" aria-label="a link to more links" class="link-link">
